# PardisoSolver

./: CMakeLists.txt  PardisoSolver.cpp  PardisoSolver.h  README.md  compile_and_run.sh  main.cpp
